--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
-    <string name="app_name">SimpleCompass</string>
-    <string name="kompass">KOMPASS</string>
+    <string name="app_name">Simple Digital Compass</string>
+    <string name="kompass">COMPASS</string>
     <string name="_0">0°</string>
     <string name="n">N</string>
-    <string name="halte_dein_ger_t_horizontal">Halte dein Gerät horizontal</string>
+    <string name="halte_dein_ger_t_horizontal">Please hold your device horizontally (recommendation)</string>
+    <string name="digital_compass">DIGITAL COMPASS</string>
+    <string name="beenden">CLOSE</string>
 </resources>
