--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="halte_dein_ger_t_horizontal">Please hold your device horizontally (recommendation)</string>
     <string name="digital_compass">DIGITAL COMPASS</string>
     <string name="beenden">CLOSE</string>
+    <string name="kalibriert">✓ calibrated</string>
 </resources>
