--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Simple Digital Compass</string>
-    <string name="kompass">COMPASS</string>
+    <string name="compass">COMPASS</string>
     <string name="_0">0°</string>
     <string name="n">N</string>
-    <string name="halte_dein_ger_t_horizontal">Please hold your device horizontally (recommendation)</string>
+    <string name="hold_device_horizontal">Please hold your device horizontally (recommendation)</string>
     <string name="digital_compass">DIGITAL COMPASS</string>
-    <string name="beenden">CLOSE</string>
-    <string name="kalibriert">✓ calibrated</string>
+    <string name="close">CLOSE</string>
+    <string name="calibrated">✓ calibrated</string>
 </resources>
